<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.univ_lille1.iut_info.martinet.myfirstapp.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_first"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/buttonOK"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabel" />

    <EditText
        android:id="@+id/last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_last"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/first"
        app:layout_constraintTop_toBottomOf="@+id/first" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/message"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/last"
        app:layout_constraintTop_toBottomOf="@+id/last" />

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="doOK"
        android:text="@android:string/ok"
        app:layout_constraintBaseline_toBaselineOf="@+id/first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/first" />

    <Button
        android:id="@+id/buttonCANCEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="doCANCEL"
        android:text="@android:string/cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/last"
        app:layout_constraintStart_toStartOf="@+id/buttonOK" />

    <Button
        android:id="@+id/buttonNew"
        android:layout_width="67dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:onClick="doNEW"
        android:text="=>"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvNewActivity"
        app:layout_constraintEnd_toEndOf="@+id/buttonCANCEL"
        app:layout_constraintStart_toEndOf="@+id/tvNewActivity" />

    <TextView
        android:id="@+id/tvNewActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/labelNewActivity"
        app:layout_constraintStart_toStartOf="@+id/message"
        app:layout_constraintTop_toBottomOf="@+id/message" />

</android.support.constraint.ConstraintLayout>
